--- a/.github/workflows/build-netbird-release.yml
+++ b/.github/workflows/build-netbird-release.yml
@@ -22,18 +22,26 @@ jobs:
           distribution: 'temurin'
           java-version: '11'
 
-      # Install Android SDK (modern + maintained)
-      - name: Install Android SDK
-        uses: android-actions/setup-android@v3
+      # Manual Android SDK install (compatible with Java 11)
+      - name: Install Android SDK (manual)
+        run: |
+          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdtools.zip
+          mkdir -p $HOME/android-sdk/cmdline-tools
+          unzip -q cmdtools.zip -d $HOME/android-sdk/cmdline-tools
+          mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
 
-      # Install required build tools, platforms, NDK & CMake
+          echo "export ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
+          echo "export ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
+          echo "export PATH=$HOME/android-sdk/cmdline-tools/latest/bin:$HOME/android-sdk/platform-tools:$PATH" >> $GITHUB_ENV
+
       - name: Install Android components
         run: |
-          sdkmanager "platform-tools" \
-                     "platforms;android-34" \
-                     "build-tools;34.0.0" \
-                     "ndk;23.1.7779620" \
-                     "cmake;3.22.1"
+          yes | sdkmanager --licenses
+          sdkmanager "platform-tools"
+          sdkmanager "platforms;android-34"
+          sdkmanager "build-tools;34.0.0"
+          sdkmanager "ndk;23.1.7779620"
+          sdkmanager "cmake;3.22.1"
 
       - name: Decode Keystore
         run: |
