--- a/.github/workflows/build-netbird-release.yml
+++ b/.github/workflows/build-netbird-release.yml
@@ -11,13 +11,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout repository with submodules
+      ###########################################################
+      # Checkout repository (with submodules)
+      ###########################################################
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           submodules: true
 
-      # Java 11 is required by gomobile + NetBird
+      ###########################################################
+      # Java 11 (required by gomobile + NetBird)
+      ###########################################################
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -25,7 +29,7 @@ jobs:
           java-version: '11'
 
       ###########################################################
-      # Install Android SDK (command-line tools compatible with Java 11)
+      # Install Android SDK Tools (compatible with Java 11)
       ###########################################################
       - name: Install Android SDK (manual, Java 11 compatible)
         run: |
@@ -39,7 +43,7 @@ jobs:
           echo "PATH=$HOME/android-sdk/cmdline-tools/latest/bin:$HOME/android-sdk/platform-tools:$PATH" >> $GITHUB_ENV
 
       ###########################################################
-      # Install Android build tools, NDK and CMake
+      # Install platforms, build tools, NDK, CMake
       ###########################################################
       - name: Install Android components
         run: |
@@ -52,7 +56,7 @@ jobs:
           $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "cmake;3.22.1"
 
       ###########################################################
-      # Decode Keystore
+      # Rebuild keystore
       ###########################################################
       - name: Decode Keystore
         run: |
@@ -60,13 +64,16 @@ jobs:
           echo "$ANDROID_KEYSTORE_BASE64" | base64 --decode > android/app/release-keystore.jks
 
       ###########################################################
-      # Install Go and gomobile
+      # Install Go language
       ###########################################################
       - name: Install Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.22'
 
+      ###########################################################
+      # Install gomobile + gobind, then run gomobile init
+      ###########################################################
       - name: Install gomobile
         run: |
           go install golang.org/x/mobile/cmd/gomobile@latest
@@ -75,7 +82,7 @@ jobs:
           gomobile init
 
       ###########################################################
-      # Force gomobile to use the correct NDK (not the runner’s NDK 27)
+      # Force gomobile to use our NDK (not GitHub's NDK 27)
       ###########################################################
       - name: Export correct NDK path for gomobile
         run: |
@@ -93,7 +100,7 @@ jobs:
           ./build-android-lib.sh
 
       ###########################################################
-      # Gradle signing setup
+      # Configure Gradle signing
       ###########################################################
       - name: Configure Release Signing
         working-directory: android/app
@@ -104,16 +111,16 @@ jobs:
           echo "keyPassword=${{ secrets.ANDROID_KEY_ALIAS_PASSWORD }}" >> keystore.properties
 
       ###########################################################
-      # Build the APK (Release + Signed)
+      # Build APK
       ###########################################################
       - name: Build Signed Release APK
         working-directory: android
         run: |
-          chmod +x ./gradlew
+          chmod +x gradlew
           ./gradlew assembleRelease --stacktrace
 
       ###########################################################
-      # Upload signed APK
+      # Upload artifact
       ###########################################################
       - name: Upload Release APK
         uses: actions/upload-artifact@v4
