--- a/.github/workflows/build-netbird-release.yml
+++ b/.github/workflows/build-netbird-release.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       ###########################################################
-      # Checkout repository (with submodules)
+      # Checkout repository
       ###########################################################
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -20,7 +20,7 @@ jobs:
           submodules: true
 
       ###########################################################
-      # Java 11 (required by gomobile + NetBird)
+      # Java 11 (required by gomobile and Android build-tools)
       ###########################################################
       - name: Set up JDK 11
         uses: actions/setup-java@v3
@@ -29,7 +29,7 @@ jobs:
           java-version: '11'
 
       ###########################################################
-      # Install Android SDK Tools (compatible with Java 11)
+      # Install Android SDK Tools (Java 11 compatible)
       ###########################################################
       - name: Install Android SDK (manual, Java 11 compatible)
         run: |
@@ -43,7 +43,7 @@ jobs:
           echo "PATH=$HOME/android-sdk/cmdline-tools/latest/bin:$HOME/android-sdk/platform-tools:$PATH" >> $GITHUB_ENV
 
       ###########################################################
-      # Install platforms, build tools, NDK, CMake
+      # Install SDK platforms, tools, NDK and CMake
       ###########################################################
       - name: Install Android components
         run: |
@@ -56,15 +56,15 @@ jobs:
           $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "cmake;3.22.1"
 
       ###########################################################
-      # Rebuild keystore
+      # Decode keystore into app/
       ###########################################################
       - name: Decode Keystore
         run: |
-          mkdir -p android/app
-          echo "$ANDROID_KEYSTORE_BASE64" | base64 --decode > android/app/release-keystore.jks
+          mkdir -p app
+          echo "$ANDROID_KEYSTORE_BASE64" | base64 --decode > app/release-keystore.jks
 
       ###########################################################
-      # Install Go language
+      # Install Go
       ###########################################################
       - name: Install Go
         uses: actions/setup-go@v4
@@ -72,7 +72,7 @@ jobs:
           go-version: '1.22'
 
       ###########################################################
-      # Install gomobile + gobind, then run gomobile init
+      # Install gomobile
       ###########################################################
       - name: Install gomobile
         run: |
@@ -82,7 +82,7 @@ jobs:
           gomobile init
 
       ###########################################################
-      # Force gomobile to use our NDK (not GitHub's NDK 27)
+      # Force gomobile to use NDK 23
       ###########################################################
       - name: Export correct NDK path for gomobile
         run: |
@@ -92,7 +92,7 @@ jobs:
           echo "PATH=$HOME/android-sdk/ndk/23.1.7779620:$PATH" >> $GITHUB_ENV
 
       ###########################################################
-      # Build Go Mobile library
+      # Build Go mobile library
       ###########################################################
       - name: Build Go Mobile library
         run: |
@@ -100,10 +100,10 @@ jobs:
           ./build-android-lib.sh
 
       ###########################################################
-      # Configure Gradle signing
+      # Generate keystore.properties inside app/
       ###########################################################
       - name: Configure Release Signing
-        working-directory: android/app
+        working-directory: app
         run: |
           echo "storeFile=release-keystore.jks" > keystore.properties
           echo "storePassword=${{ secrets.ANDROID_KEYSTORE_PASSWORD }}" >> keystore.properties
@@ -111,10 +111,9 @@ jobs:
           echo "keyPassword=${{ secrets.ANDROID_KEY_ALIAS_PASSWORD }}" >> keystore.properties
 
       ###########################################################
-      # Build APK
+      # Build signed Release APK
       ###########################################################
       - name: Build Signed Release APK
-        working-directory: android
         run: |
           chmod +x gradlew
           ./gradlew assembleRelease --stacktrace
@@ -126,4 +125,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: netbird-android-release-apk
-          path: android/app/build/outputs/apk/release/*.apk
+          path: app/build/outputs/apk/release/*.apk
