--- a/.github/workflows/build-netbird-release.yml
+++ b/.github/workflows/build-netbird-release.yml
@@ -20,16 +20,16 @@ jobs:
           submodules: true
 
       ###########################################################
-      # Java 11 (required by gomobile and Android build-tools)
+      # Java 17 (richiesto da firebase-crashlytics-gradle:3.0.6)
       ###########################################################
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '11'
+          java-version: '17'
 
       ###########################################################
-      # Install Android SDK Tools (Java 11 compatible)
+      # Install Android SDK Tools (compatibili con Java 17)
       ###########################################################
       - name: Install Android SDK (manual, Java 11 compatible)
         run: |
@@ -43,7 +43,7 @@ jobs:
           echo "PATH=$HOME/android-sdk/cmdline-tools/latest/bin:$HOME/android-sdk/platform-tools:$PATH" >> $GITHUB_ENV
 
       ###########################################################
-      # Install SDK platforms, tools, NDK and CMake
+      # Install SDK platforms, build-tools, NDK e CMake
       ###########################################################
       - name: Install Android components
         run: |
@@ -56,7 +56,7 @@ jobs:
           $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "cmake;3.22.1"
 
       ###########################################################
-      # Decode keystore into app/
+      # Ricostruzione keystore in app/
       ###########################################################
       - name: Decode Keystore
         run: |
@@ -72,7 +72,7 @@ jobs:
           go-version: '1.22'
 
       ###########################################################
-      # Install gomobile
+      # Install gomobile + gobind e gomobile init
       ###########################################################
       - name: Install gomobile
         run: |
@@ -82,7 +82,7 @@ jobs:
           gomobile init
 
       ###########################################################
-      # Force gomobile to use NDK 23
+      # Forza gomobile ad usare l'NDK 23 (non quello preinstallato)
       ###########################################################
       - name: Export correct NDK path for gomobile
         run: |
@@ -92,7 +92,7 @@ jobs:
           echo "PATH=$HOME/android-sdk/ndk/23.1.7779620:$PATH" >> $GITHUB_ENV
 
       ###########################################################
-      # Build Go mobile library
+      # Build libreria Go mobile (script del repo)
       ###########################################################
       - name: Build Go Mobile library
         run: |
@@ -100,7 +100,7 @@ jobs:
           ./build-android-lib.sh
 
       ###########################################################
-      # Generate keystore.properties inside app/
+      # Configurazione firma (keystore.properties in app/)
       ###########################################################
       - name: Configure Release Signing
         working-directory: app
@@ -111,7 +111,7 @@ jobs:
           echo "keyPassword=${{ secrets.ANDROID_KEY_ALIAS_PASSWORD }}" >> keystore.properties
 
       ###########################################################
-      # Build signed Release APK
+      # Build APK di release firmato
       ###########################################################
       - name: Build Signed Release APK
         run: |
@@ -119,7 +119,7 @@ jobs:
           ./gradlew assembleRelease --stacktrace
 
       ###########################################################
-      # Upload artifact
+      # Upload dell'APK come artifact
       ###########################################################
       - name: Upload Release APK
         uses: actions/upload-artifact@v4
