--- a/.github/workflows/build-netbird-release.yml
+++ b/.github/workflows/build-netbird-release.yml
@@ -1,9 +1,6 @@
-name: Build NetBird Android Release APK
+name: Build Netbird Release
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
 
 jobs:
@@ -11,70 +8,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      ###########################################################
-      # Checkout repository
-      ###########################################################
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          submodules: true
 
-      ###########################################################
-      # Java 17 (richiesto da firebase-crashlytics-gradle:3.0.6)
-      ###########################################################
+      # ---- 1. JAVA 17 PER COMPATIBILITÀ FIREBASE ----
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: temurin
+          java-version: 17
 
-      ###########################################################
-      # Install Android SDK Tools
-      ###########################################################
-      - name: Install Android SDK (manual)
-        run: |
-          wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip -O cmd.zip
-          mkdir -p $HOME/android-sdk/cmdline-tools
-          unzip -q cmd.zip -d $HOME/android-sdk/cmdline-tools
-          mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
+      # ---- 2. ANDROID SDK ----
+      - name: Install Android SDK
+        uses: android-actions/setup-android@v3
 
-          echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
-          echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
-          echo "PATH=$HOME/android-sdk/cmdline-tools/latest/bin:$HOME/android-sdk/platform-tools:$PATH" >> $GITHUB_ENV
-
-      ###########################################################
-      # Install SDK platforms, build-tools, NDK e CMake
-      ###########################################################
       - name: Install Android components
         run: |
-          yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+          sdkmanager "platform-tools" "platforms;android-34" "build-tools;34.0.0" "cmdline-tools;latest"
 
-          $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools"
-          $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platforms;android-34"
-          $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "build-tools;34.0.0"
-          $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "ndk;23.1.7779620"
-          $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "cmake;3.22.1"
-
-      ###########################################################
-      # Ricostruzione keystore in app/release.keystore
-      ###########################################################
+      # ---- 3. KEYSTORE ----
       - name: Decode Keystore
         run: |
-          mkdir -p app
-          echo "$ANDROID_KEYSTORE_BASE64" | base64 --decode > app/release.keystore
-          ls -l app
+          echo "$NETBIRD_UPLOAD_STORE_FILE_BASE64" | base64 -d > release.keystore
 
-      ###########################################################
-      # Install Go
-      ###########################################################
+      # ---- 4. INSTALL GO ----
       - name: Install Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: '1.22'
+          go-version: "1.22.x"
 
-      ###########################################################
-      # Install gomobile + gobind e gomobile init
-      ###########################################################
+      # ---- 5. INSTALL gomobile ----
       - name: Install gomobile
         run: |
           go install golang.org/x/mobile/cmd/gomobile@latest
@@ -82,9 +45,7 @@ jobs:
           echo "PATH=$(go env GOPATH)/bin:$PATH" >> $GITHUB_ENV
           gomobile init
 
-      ###########################################################
-      # Forza gomobile ad usare l'NDK 23
-      ###########################################################
+      # ---- 6. NDK EXPORT ----
       - name: Export correct NDK path for gomobile
         run: |
           echo "ANDROID_NDK_HOME=$HOME/android-sdk/ndk/23.1.7779620" >> $GITHUB_ENV
@@ -92,33 +53,26 @@ jobs:
           echo "NDK_HOME=$HOME/android-sdk/ndk/23.1.7779620" >> $GITHUB_ENV
           echo "PATH=$HOME/android-sdk/ndk/23.1.7779620:$PATH" >> $GITHUB_ENV
 
-      ###########################################################
-      # Build libreria Go mobile (script del repo)
-      ###########################################################
+      # ---- 7. BUILD libreria Go ----
       - name: Build Go Mobile library
         run: |
           chmod +x ./build-android-lib.sh
           ./build-android-lib.sh
 
-      ###########################################################
-      # Build APK di release firmato
-      # -> qui passiamo le NETBIRD_UPLOAD_* che usa app/build.gradle.kts
-      ###########################################################
+      # ---- 8. BUILD APK SIGNATO ----
       - name: Build Signed Release APK
         env:
-          NETBIRD_UPLOAD_STORE_FILE: app/release.keystore
-          NETBIRD_UPLOAD_STORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
-          NETBIRD_UPLOAD_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
-          NETBIRD_UPLOAD_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_ALIAS_PASSWORD }}
+          NETBIRD_UPLOAD_STORE_FILE: ../release.keystore
+          NETBIRD_UPLOAD_STORE_PASSWORD: ${{ secrets.NETBIRD_UPLOAD_STORE_PASSWORD }}
+          NETBIRD_UPLOAD_KEY_ALIAS: ${{ secrets.NETBIRD_UPLOAD_KEY_ALIAS }}
+          NETBIRD_UPLOAD_KEY_PASSWORD: ${{ secrets.NETBIRD_UPLOAD_KEY_PASSWORD }}
         run: |
           chmod +x gradlew
           ./gradlew assembleRelease --stacktrace
 
-      ###########################################################
-      # Upload dell'APK come artifact
-      ###########################################################
+      # ---- 9. UPLOAD APK ----
       - name: Upload Release APK
         uses: actions/upload-artifact@v4
         with:
-          name: netbird-android-release-apk
+          name: Netbird-Release
           path: app/build/outputs/apk/release/*.apk
