--- a/.github/workflows/build-netbird-release.yml
+++ b/.github/workflows/build-netbird-release.yml
@@ -1,4 +1,4 @@
-name: Build Netbird Release
+name: Build Signed Release APK
 
 on:
   workflow_dispatch:
@@ -8,71 +8,75 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # -------------------------
+      # Checkout repository
+      # -------------------------
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      # ---- 1. JAVA 17 PER COMPATIBILITÀ FIREBASE ----
+      # -------------------------
+      # Install JDK 17
+      # -------------------------
       - name: Set up JDK 17
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v3
         with:
-          distribution: temurin
-          java-version: 17
+          distribution: "temurin"
+          java-version: "17"
 
-      # ---- 2. ANDROID SDK ----
-      - name: Install Android SDK
-        uses: android-actions/setup-android@v3
+      # -------------------------
+      # Install Android SDK + NDK
+      # -------------------------
+      - name: Install Android SDK + NDK
+        uses: android-actions/setup-android@v2
+        with:
+          ndk: "26.1.10909125"
 
-      - name: Install Android components
-        run: |
-          sdkmanager "platform-tools" "platforms;android-34" "build-tools;34.0.0" "cmdline-tools;latest"
-
-      # ---- 3. KEYSTORE ----
-      - name: Decode Keystore
-        run: |
-          echo "$NETBIRD_UPLOAD_STORE_FILE_BASE64" | base64 -d > release.keystore
-
-      # ---- 4. INSTALL GO ----
+      # -------------------------
+      # Install Go (latest stable)
+      # -------------------------
       - name: Install Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v4
         with:
-          go-version: "1.22.x"
+          go-version: 'stable'
 
-      # ---- 5. INSTALL gomobile ----
+      # -------------------------
+      # Install gomobile
+      # -------------------------
       - name: Install gomobile
         run: |
           go install golang.org/x/mobile/cmd/gomobile@latest
-          go install golang.org/x/mobile/cmd/gobind@latest
-          echo "PATH=$(go env GOPATH)/bin:$PATH" >> $GITHUB_ENV
           gomobile init
 
-      # ---- 6. NDK EXPORT ----
-      - name: Export correct NDK path for gomobile
-        run: |
-          echo "ANDROID_NDK_HOME=$HOME/android-sdk/ndk/23.1.7779620" >> $GITHUB_ENV
-          echo "ANDROID_NDK_ROOT=$HOME/android-sdk/ndk/23.1.7779620" >> $GITHUB_ENV
-          echo "NDK_HOME=$HOME/android-sdk/ndk/23.1.7779620" >> $GITHUB_ENV
-          echo "PATH=$HOME/android-sdk/ndk/23.1.7779620:$PATH" >> $GITHUB_ENV
-
-      # ---- 7. BUILD libreria Go ----
+      # -------------------------------------------------------
+      # Build Go Mobile library (this creates gomobile .aar deps)
+      # -------------------------------------------------------
       - name: Build Go Mobile library
         run: |
           chmod +x ./build-android-lib.sh
           ./build-android-lib.sh
 
-      # ---- 8. BUILD APK SIGNATO ----
+      # -------------------------
+      # Gradle wrapper permission
+      # -------------------------
+      - name: Make gradlew executable
+        run: chmod +x gradlew
+
+      # -------------------------
+      # Build Release APK
+      # -------------------------
       - name: Build Signed Release APK
         env:
-          NETBIRD_UPLOAD_STORE_FILE: ../release.keystore
+          NETBIRD_UPLOAD_STORE_FILE: ${{ secrets.NETBIRD_UPLOAD_STORE_FILE }}
           NETBIRD_UPLOAD_STORE_PASSWORD: ${{ secrets.NETBIRD_UPLOAD_STORE_PASSWORD }}
           NETBIRD_UPLOAD_KEY_ALIAS: ${{ secrets.NETBIRD_UPLOAD_KEY_ALIAS }}
           NETBIRD_UPLOAD_KEY_PASSWORD: ${{ secrets.NETBIRD_UPLOAD_KEY_PASSWORD }}
-        run: |
-          chmod +x gradlew
-          ./gradlew assembleRelease --stacktrace
+        run: ./gradlew assembleRelease --stacktrace
 
-      # ---- 9. UPLOAD APK ----
+      # -------------------------
+      # Upload generated APK
+      # -------------------------
       - name: Upload Release APK
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: Netbird-Release
+          name: app-release.apk
           path: app/build/outputs/apk/release/*.apk
