--- a/.github/workflows/build-netbird-release.yml
+++ b/.github/workflows/build-netbird-release.yml
@@ -8,75 +8,66 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # -------------------------
       # Checkout repository
-      # -------------------------
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # -------------------------
       # Install JDK 17
-      # -------------------------
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          distribution: "temurin"
-          java-version: "17"
+          distribution: temurin
+          java-version: 17
 
-      # -------------------------
       # Install Android SDK + NDK
-      # -------------------------
       - name: Install Android SDK + NDK
-        uses: android-actions/setup-android@v2
+        uses: android-actions/setup-android@v3
         with:
-          ndk: "26.1.10909125"
+          ndk: 26.1.10909125
 
-      # -------------------------
-      # Install Go (latest stable)
-      # -------------------------
-      - name: Install Go
-        uses: actions/setup-go@v4
+      # Install Go
+      - name: Set up Go
+        uses: actions/setup-go@v5
         with:
-          go-version: 'stable'
+          go-version: stable
 
-      # -------------------------
       # Install gomobile
-      # -------------------------
       - name: Install gomobile
         run: |
           go install golang.org/x/mobile/cmd/gomobile@latest
           gomobile init
 
-      # -------------------------------------------------------
-      # Build Go Mobile library (this creates gomobile .aar deps)
-      # -------------------------------------------------------
+      # Build gomobile library
       - name: Build Go Mobile library
         run: |
           chmod +x ./build-android-lib.sh
           ./build-android-lib.sh
 
-      # -------------------------
-      # Gradle wrapper permission
-      # -------------------------
+      # ---------------------------------------------
+      # REBUILD KEYSTORE FROM BASE64 (THIS FIXES ALL)
+      # ---------------------------------------------
+      - name: Recreate release.keystore from BASE64
+        env:
+          KEYSTORE_B64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
+        run: |
+          echo "$KEYSTORE_B64" | base64 --decode > app/release.keystore
+
+      # gradlew permissions
       - name: Make gradlew executable
         run: chmod +x gradlew
 
-      # -------------------------
-      # Build Release APK
-      # -------------------------
+      # Build signed APK
       - name: Build Signed Release APK
         env:
-          NETBIRD_UPLOAD_STORE_FILE: ${{ secrets.NETBIRD_UPLOAD_STORE_FILE }}
-          NETBIRD_UPLOAD_STORE_PASSWORD: ${{ secrets.NETBIRD_UPLOAD_STORE_PASSWORD }}
-          NETBIRD_UPLOAD_KEY_ALIAS: ${{ secrets.NETBIRD_UPLOAD_KEY_ALIAS }}
-          NETBIRD_UPLOAD_KEY_PASSWORD: ${{ secrets.NETBIRD_UPLOAD_KEY_PASSWORD }}
+          NETBIRD_UPLOAD_STORE_FILE: app/release.keystore
+          NETBIRD_UPLOAD_STORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+          NETBIRD_UPLOAD_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
+          NETBIRD_UPLOAD_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_ALIAS_PASSWORD }}
         run: ./gradlew assembleRelease --stacktrace
 
-      # -------------------------
-      # Upload generated APK
-      # -------------------------
+      # Upload APK artifact
       - name: Upload Release APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: app-release.apk
           path: app/build/outputs/apk/release/*.apk
